fixed rendering bug relating to letter spacing

--- a/firefox/resources/font.css
+++ b/firefox/resources/font.css
@@ -2,4 +2,5 @@
     font-family: Trunic;
     text-rendering: optimizeLegibility;
     text-transform: none;
+    letter-spacing: normal;
 }
